Update new changes to README.md and index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<div>Hello</div>
+<!DOCTYPE html>
+<html lang="en">
+<header>
+    <title>
+        TEST GITHUB
+    </title>
+</header>
+
+<body>
+    <main>
+        <p>My name is Quang Phu</p>
+    </main>
+</body>
+
+</html>
